# scrubexif

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Changelog  Changelog.md  Dockerfile  Makefile  README.md  index.html  pyproject.toml  pytest.ini  scrub.py
.github/: pull_request_template.md
clonepulse/: badge_clones.json  docker_pulls.json  fetch_clones.json  fetch_docker_pulls.py  milestone_1000.txt  milestone_2000.txt  milestone_500.txt  milestone_5000.txt  milestone_badge.json
doc/: DETAILS.md  README.md  build-history.json  cosign_badge.json  rename-spec.md
scripts/: git_commit_if_changed.sh  grype_sarif_summary.py  remove_dockerhub_tag.py  run_scrubexif_photoprism.sh  scrubexif-demo.sh  soak.sh  update_build_log.py  write_cosign_badge.py
scrubexif/: __about__.py  renaming.py  scrub.py
tests/: _docker.py  conftest.py  test_auto_mode.py  test_auto_mode_container.py  test_auto_mode_exif_removal.py  test_check_version_guards.py  test_cli_arg_validation.py  test_cli_debug.py  test_corrupted_inputs.py  test_duplicate_handling.py  test_jpegtran.py  test_manual_mode.py  test_metadata_stamping.py  test_nightly_stability.py  test_paranoia_gps.py  test_path_output.py  test_preflight_checks_container.py  test_private_assets.py  test_quiet_mode.py  test_remove_dockerhub_tag.py  test_rename_integration.py  test_renaming.py  test_scrub_file_behavior.py  test_security.py  test_simple_mode.py  test_simple_mode_integration.py  test_smoke_container.py  test_soak.py  test_state_file_option.py  test_state_resolution.py  (+2 more)
(+11 files in other folders)
