# scrubexif/pyproject.toml
[project]
name = "scrubexif"
version = "0.7.4"
description = "CLI tool to scrub JPEG EXIF metadata"
authors = [{ name = "Per Jensen", email = "per2jensen@gmail.com" }]
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scrubexif"]

[project.scripts]
scrub = "scrubexif.scrub:main"

