# scrubexif/pyproject.toml
[project]
name = "scrubexif"
version = "0.7.7"
description = "CLI tool to scrub JPEG EXIF metadata"
authors = [{ name = "Per Jensen", email = "per2jensen@gmail.com" }]
dependencies = [
    "Pillow>=10.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scrubexif"]

[project.scripts]
scrub = "scrubexif.scrub:main"
