# scrubexif/pyproject.toml
[project]
name = "scrubexif"
dynamic = ["version"]
description = "CLI tool to scrub JPEG EXIF metadata"
authors = [{ name = "Per Jensen", email = "per2jensen@gmail.com" }]
dependencies = [
    "Pillow>=10.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scrubexif"]

[tool.setuptools.dynamic]
version = { attr = "scrubexif.__about__.__version__" }

[project.scripts]
scrub = "scrubexif.scrub:main"
